--- a/EmpDepConsume/consume.html
+++ b/EmpDepConsume/consume.html
@@ -9,11 +9,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
     <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" type="text/css" />
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
     <script src="consumejs.js"></script>
     <title>Dealer Portal</title>
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -41,9 +42,46 @@
     </nav>
     <div class="container" style="margin-top:5em;">
         <div class="row">
-            <button id="clickme" class="btn btn-primary">Populate Table</button>
+            <div class="col-md-8">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <form method="post" action="http://localhost:57671/api/emp">
+                            <div class="form-horizontal">
+                                <div class="form-group">
+                                    <label for="EmpName" class="control-label col-md-5">Emp Name</label>
+                                    <div class="col-md-6">
+                                        <input type="text" name="EmpName" id="EmpName" required class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="DeptName" class="control-label col-md-5">Department Name</label>
+                                    <div class="col-md-6">
+                                        <select required class="form-control" id="DeptName" name="DeptName">
+                                            <option value="">select</option>
+                                            <option value="HR">HR</option>
+                                            <option value="Finance">Finance</option>
+                                            <option value="Sales">Sales</option>
+                                        </select>
+                                        <!--<input type="text" required name="DeptName"  class="form-control" />-->
+                                    </div>
+                                </div>
+                                <div class="form-group container">
+                                    <div class="col-md-6">
+                                        <button class="btn btn-primary" type="submit" id="jsinsert">Add Employee</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <button id="clickme" class="btn btn-primary">Populate Table</button>
+
+            </div>
+
         </div>
-        <hr/>
+        <hr />
         <div class="row">
             <div class="panel panel-default">
                 <div class="panel-body">
@@ -56,11 +94,54 @@
 
                             </tr>
                         </thead>
-                        <tbody id="tableData">
-
-                        </tbody>
+                        <tbody id="tableData"></tbody>
                     </table>
                 </div>
+            </div>
+        </div>
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Update</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form method="post" action="http://localhost:57671/api/emp">
+                            <div class="form-horizontal">
+                                <div class="form-group">
+                                    <label for="EmpName" class="control-label col-md-5">Emp Name</label>
+                                    <div class="col-md-6">
+                                        <input type="text" name="EmpName" id="EmpName" required class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="DeptName" class="control-label col-md-5">Department Name</label>
+                                    <div class="col-md-6">
+                                        <select required class="form-control" id="DeptName" name="DeptName">
+                                            <option value="">select</option>
+                                            <option value="HR">HR</option>
+                                            <option value="Finance">Finance</option>
+                                            <option value="Sales">Sales</option>
+                                        </select>
+                                        <!--<input type="text" required name="DeptName"  class="form-control" />-->
+                                    </div>
+                                </div>
+                                <div class="form-group container">
+                                    <div class="col-md-6">
+                                        <button class="btn btn-primary" type="submit" id="jsinsert">Update Employee</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
