--- a/EmpDepConsume/consume.html
+++ b/EmpDepConsume/consume.html
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="form-group container">
                                     <div class="col-md-6">
-                                        <button class="btn btn-primary" type="submit" id="jsinsert">Update Employee</button>
+                                        <button class="btn btn-primary" type="submit" id="jsupdate">Update Employee</button>
                                     </div>
                                 </div>
                             </div>
